# CIRE-RAG

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  CONTEXT.MD  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.sh  chat.sh  check_type.py  dev.sh  docker-compose.yml  e2e.md  find_iso.py  informe.md  ing.sh  inspect_chunks.py  inspect_pages_v2.py  mypy.ini  requirements-core.txt  requirements-local.txt  requirements.in  requirements.txt  ruff.toml  run_worker.py  stack.sh  start_api.sh  start_worker.sh  test_comprehensive.py  test_rerank.py  test_rerank2.py  trigger_retry.py
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
app/: main.py  worker.py
docs/: README.md  architecture.md  architecture_boundaries.md  developer-guide.md  e2e.md  getting-started.md  migration-rag-orchestrator-split-local.md  operations.md  retrieval_audit_modules.md
orchestrator/: README.md  chat_cli.py  start_api.sh
rag-ingestion/: .env.example  README.md  bootstrap.sh  doc_chat_cli.py  requirements.in  requirements.txt  start_api.sh
scripts/: audit_iso_ingestion.py  bench_ingestion_pipeline.py  bootstrap.sh  cleanup_collections.py  debug_collections.py  debug_rag_quality.py  debug_source_metadata.py  dev.sh  fix_rag_metadata.py  fix_source_metadata.py  run_worker.py  stack.sh  start_api.sh  start_worker.sh  verify_latency_config.py  verify_slo_performance.py
sdk/python/: README.md  __init__.py  cire_rag_client.py  pyproject.toml
sdk/python/cire_rag_sdk/: __init__.py  client.py
supabase/: schema.sql  security_audit.sql  seed_ghost_assets.sql
(+715 files in other folders)
